<resources>
    <string name="app_name">Discount App of Shopers</string>
    <string name="title_activity_customer_home">CustomerHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_shopper_home">ShopperHomeActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="terms_and_conditions_for_customer">SECTION 1 - ONLINE STORE TERMS
    By agreeing to these Terms of Service, you represent that you are at least the age of majority in your state or province of residence, or that you are the age of majority in your state or province of residence and you have given us your consent to allow any of your minor dependents to use this site.
    \n
    \n
    SECTION 2 - GENERAL CONDITIONS
    We reserve the right to refuse service to anyone for any reason at any time.
    \n
    \n
    SECTION 3 - ACCURACY, COMPLETENESS AND TIMELINESS OF INFORMATION
    We are not responsible if information made available on this site is not accurate, complete or current
    \n
    \n
    SECTION 4 - MODIFICATIONS TO THE SERVICE AND PRICES
    Prices for our products are subject to change without notice.
    We reserve the right at any time to modify or discontinue the Service (or any part or content thereof) without notice at any time.
   \n
   \n
   SECTION 5 - PRODUCTS OR SERVICES
    Some products or services may only be available online through the website. These services may have limited quantities and are subject to return or exchange only based on our Return Policy
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="action_search">Search</string>
    <string name="signed_out">Sign Out</string>
    <string name="hint_phone_number">Phone NUmber</string>
    <string name="hint_verification_code">Veryfication PHone</string>
    <string name="start_phone_auth">state Phone auth</string>
    <string name="verify_phone_auth">Veryfy Phone</string>
    <string name="resend_phone_auth">resent code</string>
    <string name="sign_out">Sign Out</string>
    <string name="connect">Connect</string>
    <string name="no_internet">No Internet</string>
    <string name="share_text">shaire it</string>
    <string name="title_activity_maps_shopper">Map</string>
    <string name="merriage">"Marry the single people from among you and the righteous slaves and slave-girls. If you are poor, Allah (SwT) will make you rich through His favour; and Allah (SwT) is Bountiful, All-Knowing." (Surah 24, Verse 32)</string>
</resources>
